RequirePackage(ZLIB)
RequirePackage(ENet)


FILE(GLOB Sources "*.?pp")
ADD_LIBRARY(KjCommon ${Sources})


INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(KjCommon ${ZLIB_LIBRARIES})

ADD_DEFINITIONS(${ENET_DEFINITIONS})
INCLUDE_DIRECTORIES(${ENET_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(KjCommon ${ENET_LIBRARIES})


ADD_SUBDIRECTORY(Server)
ADD_SUBDIRECTORY(Client)