RequirePackage(GLFW)
RequirePackage(OpenGL)
RequirePackage(PNG)

OPTION(UseStaticGLEW "..." OFF)
IF(${UseStaticGLEW} STREQUAL OFF)
	RequirePackage(GLEW)
ENDIF()


FILE(GLOB Sources "*.?pp")
ADD_EXECUTABLE(kj ${Sources})
TARGET_LINK_LIBRARIES(kj KjCommon)


INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(kj ${GLFW_LIBRARY})

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(kj ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})

IF(${UseStaticGLEW} STREQUAL ON)
	INCLUDE_DIRECTORIES("${SourceDir}/glew")
	ADD_DEFINITIONS("-DGLEW_STATIC")
ELSE()
	INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(kj ${GLEW_LIBRARIES})
ENDIF()


ADD_DEFINITIONS(${PNG_DEFINITIONS})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(kj ${PNG_LIBRARIES})