RequirePackage(GLFW)
RequirePackage(OpenGL)
RequirePackage(PNG)

OPTION(UseStaticGLEW "..." OFF)
IF(${UseStaticGLEW} STREQUAL OFF)
	RequirePackage(GLEW)
ENDIF()


FILE(GLOB Sources "*.?pp")
LIST(REMOVE_ITEM Sources "Main.cpp")
ADD_LIBRARY(VoidClient ${Sources})
TARGET_LINK_LIBRARIES(VoidClient VoidCommon)

ADD_EXECUTABLE(void "Main.cpp")
TARGET_LINK_LIBRARIES(void VoidClient)


INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(void ${GLFW_LIBRARY})

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(void ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})

IF(${UseStaticGLEW} STREQUAL ON)
	INCLUDE_DIRECTORIES("${SourceDir}/glew")
	ADD_DEFINITIONS("-DGLEW_STATIC")
ELSE()
	INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(void ${GLEW_LIBRARIES})
ENDIF()


ADD_DEFINITIONS(${PNG_DEFINITIONS})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(void ${PNG_LIBRARIES})